--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -33,6 +33,15 @@
   alt: Melb entrance
   people: Johanna Bayer
   description: Reuniting the online folks!
+  
+  - title: CUAS
+  name: MP
+  city: Carinthia
+  img: ktn.jpg
+  thumbnail: treeM.jpg
+  alt: DN entrance
+  people: MP
+  description: :D
 
 - title: St Lucia
   name: SL
